Initial commit. Basic game class with nothing rendering, but has builds working in both Win32 and HTML5.

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,12 @@
 *.exe
 *.out
 *.app
+
+#Temp Files generated during compilation/linking
+Temp Files/
+
+#Compiled Build Files
+Build/
+
+#Compiled Library Files
+Libraries/
