Added assertion checking to the debug build using ENABLE_ASSERTIONS.
Added a basic player ship (not yet moving)
ISSUE: flickering in Windows build. (Current guess, the game is rendering too quickly)

--- a/Project Files/VS2010/MeteoroidGame.vcxproj
+++ b/Project Files/VS2010/MeteoroidGame.vcxproj
@@ -86,6 +86,7 @@
     <ClCompile>
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
+      <PreprocessorDefinitions>ENABLE_ASSERTIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
