Updated emscripten build settings so that the no offsetof warning modifier is in effect.
Added an outer space physics system that just does integration in place of the terrestrial physics sytem.
Added buffer clear to the start of renderer (fixes flickering problem [note to self: I am dumb])
Added physics component to the player.

--- a/Project Files/VS2010/MeteoroidGame.vcxproj
+++ b/Project Files/VS2010/MeteoroidGame.vcxproj
@@ -112,6 +112,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Emscripten'">
     <ClCompile>
       <AdditionalIncludeDirectories>..\..\..\vingine-core</AdditionalIncludeDirectories>
+      <AdditionalOptions>-Wno-invalid-offsetof %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <EmbedFile>
@@ -127,6 +128,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Emscripten'">
     <ClCompile>
       <AdditionalIncludeDirectories>..\..\..\vingine-core</AdditionalIncludeDirectories>
+      <AdditionalOptions>-Wno-invalid-offsetof %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <EmbedFile>
@@ -141,10 +143,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Code\MeteoroidGame.hpp" />
+    <ClInclude Include="..\..\Code\OuterSpacePhysicsSystem.hpp" />
     <ClInclude Include="..\..\Code\VingineBuildPreferences.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Code\MeteoroidGame.cpp" />
+    <ClCompile Include="..\..\Code\OuterSpacePhysicsSystem.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
