--- a/Project Files/VS2010/MeteoroidGame.vcxproj.filters
+++ b/Project Files/VS2010/MeteoroidGame.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="..\..\Code\OuterSpacePhysicsSystem.hpp">
       <Filter>Code</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Code\ShipBlueprint.hpp">
+      <Filter>Code</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Code\MeteoroidGame.cpp">
       <Filter>Code</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Code\OuterSpacePhysicsSystem.cpp">
+      <Filter>Code</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Code\ShipBlueprint.cpp">
       <Filter>Code</Filter>
     </ClCompile>
   </ItemGroup>
