Created a collision component and collision system class set in order to handle object collisions for the game.
Added collision components to the ship and meteoroid blueprint classes
Adjusted the naming of the objects in the entity building function to cover up all of the copypasta.

--- a/Project Files/VS2010/MeteoroidGame.vcxproj
+++ b/Project Files/VS2010/MeteoroidGame.vcxproj
@@ -142,6 +142,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Code\CollisionComponent2D.hpp" />
+    <ClInclude Include="..\..\Code\CollisionSystem2D.hpp" />
     <ClInclude Include="..\..\Code\MeteoroidBlueprint.hpp" />
     <ClInclude Include="..\..\Code\MeteoroidGame.hpp" />
     <ClInclude Include="..\..\Code\OuterSpacePhysicsSystem.hpp" />
@@ -149,6 +151,7 @@
     <ClInclude Include="..\..\Code\VingineBuildPreferences.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Code\CollisionSystem2D.cpp" />
     <ClCompile Include="..\..\Code\MeteoroidBlueprint.cpp" />
     <ClCompile Include="..\..\Code\MeteoroidGame.cpp" />
     <ClCompile Include="..\..\Code\OuterSpacePhysicsSystem.cpp" />
