Created a new system, the cleanup system, to cleanup miscellaneous components that need no specific update or render functionality.
Moved collision event out of collision system.
Added the idea of an entity type to help differentiate entities for things like destruction (as a crutch that can hopefully be changed later)
Added a new component, fracturing component, that handles the breaking of asteroids.
Added some data bundle strings to the game events header.
Made many adjustments to the meteoroid game's lifecycle to fix some issues on closure.
Fixed both blueprint classes' use of vertexdata to avoid memory corruption when the vertex data is deallocated.
Changed the meteoroid blueprint to use the new entity blueprint interface.

--- a/Project Files/VS2010/MeteoroidGame.vcxproj.filters
+++ b/Project Files/VS2010/MeteoroidGame.vcxproj.filters
@@ -36,6 +36,15 @@
     <ClInclude Include="..\..\Code\GameEvents.hpp">
       <Filter>Code</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Code\EntityTypes.h">
+      <Filter>Code</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Code\FracturingComponent.hpp">
+      <Filter>Code</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Code\CleanupSystem.hpp">
+      <Filter>Code</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Code\MeteoroidGame.cpp">
@@ -54,6 +63,9 @@
       <Filter>Code</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Code\GameplayComponent.cpp">
+      <Filter>Code</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Code\CleanupSystem.cpp">
       <Filter>Code</Filter>
     </ClCompile>
   </ItemGroup>
