--- a/Project Files/VS2010/MeteoroidGame.vcxproj
+++ b/Project Files/VS2010/MeteoroidGame.vcxproj
@@ -144,6 +144,9 @@
   <ItemGroup>
     <ClInclude Include="..\..\Code\CollisionComponent2D.hpp" />
     <ClInclude Include="..\..\Code\CollisionSystem2D.hpp" />
+    <ClInclude Include="..\..\Code\EntityTypes.h" />
+    <ClInclude Include="..\..\Code\FracturingComponent.hpp" />
+    <ClInclude Include="..\..\Code\CleanupSystem.hpp" />
     <ClInclude Include="..\..\Code\GameEvents.hpp" />
     <ClInclude Include="..\..\Code\GameplayComponent.hpp" />
     <ClInclude Include="..\..\Code\MeteoroidBlueprint.hpp" />
@@ -154,6 +157,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Code\CollisionSystem2D.cpp" />
+    <ClCompile Include="..\..\Code\CleanupSystem.cpp" />
     <ClCompile Include="..\..\Code\GameplayComponent.cpp" />
     <ClCompile Include="..\..\Code\MeteoroidBlueprint.cpp" />
     <ClCompile Include="..\..\Code\MeteoroidGame.cpp" />
