--- a/.gitignore
+++ b/.gitignore
@@ -27,11 +27,17 @@
 *.out
 *.app
 
-#Temp Files generated during compilation/linking
+# Visual Studio User-specific files
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Temp Files generated during compilation/linking
 Temp Files/
 
-#Compiled Build Files
+# Compiled Build Files
 Build/
 
-#Compiled Library Files
+# Compiled Library Files
 Libraries/
