Made the .suo gitignore changes to the master branch

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,16 @@
 *.out
 *.app
 
+# Visual Studio User-specific files
+
+*.suo
+
+*.user
+
+*.userosscache
+
+*.sln.docstates
+
 #Temp Files generated during compilation/linking
 Temp Files/
 
