--- a/Project Files/VS2010/MeteoroidGame.vcxproj
+++ b/Project Files/VS2010/MeteoroidGame.vcxproj
@@ -148,21 +148,27 @@
     <ClInclude Include="..\..\Code\FracturingComponent.hpp" />
     <ClInclude Include="..\..\Code\CleanupSystem.hpp" />
     <ClInclude Include="..\..\Code\GameEvents.hpp" />
+    <ClInclude Include="..\..\Code\GameInputComponent.hpp" />
+    <ClInclude Include="..\..\Code\GameInputSystem.hpp" />
     <ClInclude Include="..\..\Code\GameplayComponent.hpp" />
     <ClInclude Include="..\..\Code\MeteoroidBlueprint.hpp" />
     <ClInclude Include="..\..\Code\MeteoroidGame.hpp" />
     <ClInclude Include="..\..\Code\OuterSpacePhysicsSystem.hpp" />
     <ClInclude Include="..\..\Code\ShipBlueprint.hpp" />
     <ClInclude Include="..\..\Code\VingineBuildPreferences.hpp" />
+    <ClInclude Include="..\..\Code\WarpComponent.hpp" />
+    <ClInclude Include="..\..\Code\WarpSystem.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Code\CollisionSystem2D.cpp" />
     <ClCompile Include="..\..\Code\CleanupSystem.cpp" />
+    <ClCompile Include="..\..\Code\GameInputSystem.cpp" />
     <ClCompile Include="..\..\Code\GameplayComponent.cpp" />
     <ClCompile Include="..\..\Code\MeteoroidBlueprint.cpp" />
     <ClCompile Include="..\..\Code\MeteoroidGame.cpp" />
     <ClCompile Include="..\..\Code\OuterSpacePhysicsSystem.cpp" />
     <ClCompile Include="..\..\Code\ShipBlueprint.cpp" />
+    <ClCompile Include="..\..\Code\WarpSystem.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
