--- a/Project Files/VS2010/MeteoroidGame.vcxproj.filters
+++ b/Project Files/VS2010/MeteoroidGame.vcxproj.filters
@@ -45,6 +45,18 @@
     <ClInclude Include="..\..\Code\CleanupSystem.hpp">
       <Filter>Code</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Code\GameInputComponent.hpp">
+      <Filter>Code</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Code\GameInputSystem.hpp">
+      <Filter>Code</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Code\WarpComponent.hpp">
+      <Filter>Code</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Code\WarpSystem.hpp">
+      <Filter>Code</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Code\MeteoroidGame.cpp">
@@ -66,6 +78,12 @@
       <Filter>Code</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Code\CleanupSystem.cpp">
+      <Filter>Code</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Code\GameInputSystem.cpp">
+      <Filter>Code</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Code\WarpSystem.cpp">
       <Filter>Code</Filter>
     </ClCompile>
   </ItemGroup>
