--- a/Project Files/VS2010/MeteoroidGame.vcxproj.filters
+++ b/Project Files/VS2010/MeteoroidGame.vcxproj.filters
@@ -84,6 +84,15 @@
     <ClInclude Include="..\..\Code\ScoringComponent.hpp">
       <Filter>Code\Component + System</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Code\UIElement.hpp">
+      <Filter>Code\Component + System</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Code\UISystem.hpp">
+      <Filter>Code\Component + System</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Code\NumberDisplayElement.hpp">
+      <Filter>Code\Component + System</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Code\MeteoroidGame.cpp">
@@ -123,6 +132,12 @@
       <Filter>Code\Component + System</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Code\ScoringSystem.cpp">
+      <Filter>Code\Component + System</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Code\UISystem.cpp">
+      <Filter>Code\Component + System</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Code\NumberDisplayElement.cpp">
       <Filter>Code\Component + System</Filter>
     </ClCompile>
   </ItemGroup>
