--- a/Project-Files/VS2010/MeteoroidGame.vcxproj.filters
+++ b/Project-Files/VS2010/MeteoroidGame.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClInclude Include="..\..\Code\NumberDisplayElement.hpp">
       <Filter>Code\Component + System</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\native_app_glue\android_native_app_glue.h">
+      <Filter>Code</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Code\MeteoroidGame.cpp">
@@ -139,6 +142,9 @@
     </ClCompile>
     <ClCompile Include="..\..\Code\NumberDisplayElement.cpp">
       <Filter>Code\Component + System</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\native_app_glue\android_native_app_glue.c">
+      <Filter>Code</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
