Added a vector version of the icon to the raw assets folder.
added a jpeg version of the icon to the raw assets folder.
Added the icon to the manifest and resources for meteoroids.
Updated application name, library name, and package name to properly reflect the game name.

--- a/Project-Files/VS2010/MeteoroidGame.vcxproj
+++ b/Project-Files/VS2010/MeteoroidGame.vcxproj
@@ -104,7 +104,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Tegra-Android'">
     <OutDir>$(SolutionDir)..\..\Build\$(Platform)\</OutDir>
     <IntDir>$(SolutionDir)..\..\Temp-Files\$(Platform)_$(Configuration)\</IntDir>
-    <TargetName>libAndroidTest</TargetName>
+    <TargetName>libMeteoroids</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
