--- a/Project-Files/VS2010/AndroidManifest.xml
+++ b/Project-Files/VS2010/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- BEGIN_INCLUDE(manifest) -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="vingenuity.androidtest"
+        package="vingenuity.meteoroids"
         android:versionCode="1"
         android:versionName="1.0">
 
@@ -9,7 +9,7 @@
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="21" />
 
     <!-- This .apk has no Java code itself, so set hasCode to false. -->
-    <application android:label="@string/app_name" android:hasCode="False">
+    <application android:icon="@drawable/meteoroids_icon" android:label="@string/app_name" android:hasCode="False">
 
         <!-- Our activity is the built-in NativeActivity framework class.
              This will take care of integrating with our NDK code. -->
@@ -18,7 +18,7 @@
                 android:configChanges="orientation|keyboardHidden">
             <!-- Tell NativeActivity the name of our .so -->
             <meta-data android:name="android.app.lib_name"
-                    android:value="AndroidTest" />
+                    android:value="Meteoroids" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
