--- a/Project-Files/VS2010/AndroidManifest.xml
+++ b/Project-Files/VS2010/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="21" />
 
     <!-- This .apk has no Java code itself, so set hasCode to false. -->
-    <application android:icon="@drawable/meteoroids_icon" android:label="@string/app_name" android:hasCode="False">
+    <application android:icon="@drawable/meteoroids_icon" android:label="@string/app_name" android:hasCode="False" android:theme="@style/Theme.DarkNoTitle">
 
         <!-- Our activity is the built-in NativeActivity framework class.
              This will take care of integrating with our NDK code. -->
